--- a/appspec.yml
+++ b/appspec.yml
@@ -1,27 +1,14 @@
 version: 0.0
-os: linux 
+os: linux
 files:
-- source: /
-   destination: /hello
-permissions:
-- object: /
-   pattern: "**"
-   owner: ec2-user
-   group: ec2-user
+  - source: /
+    destination: /hello
 hooks:
-  BeforeInstall:
-    - location: scripts/before_install.sh
-      timeout: 300
-      runas: ec2-user
-  AfterInstall:
-    - location: scripts/after_install.sh
-      timeout: 300
-      runas: ec2-user
-  ApplicationStart:
-    - location: scripts/application_start.sh
-      timeout: 300
-      runas: ec2-user
   ApplicationStop:
     - location: scripts/application_stop.sh
       timeout: 300
-      runas: ec2-user
+      runas: root
+  AfterInstall:
+    - location: scripts/after_install.sh
+      timeout: 300
+      runas: root
