--- a/appspec.yml
+++ b/appspec.yml
@@ -8,3 +8,7 @@ hooks:
     - location: scripts/after_install.sh
       timeout: 300
       runas: ec2-user
+  ApplicationStop:
+    - location: scripts/application_stop.sh
+      timeout: 300
+      runas: ec2-user
