--- a/appspec.yml
+++ b/appspec.yml
@@ -7,8 +7,8 @@ hooks:
   AfterInstall:
     - location: scripts/after_install.sh
       timeout: 300
-      runas: ec2-user
+      runas: root
   ApplicationStop:
     - location: scripts/application_stop.sh
       timeout: 300
-      runas: ec2-user
+      runas: root
