--- a/appspec.yml
+++ b/appspec.yml
@@ -10,3 +10,6 @@ hooks:
   ApplicationStop:
     - location: scripts/application_stop.sh
       timeout: 300
+  ApplicationStart:
+    - location: scripts/application_start.sh
+      timeout: 300
