--- a/appspec.yml
+++ b/appspec.yml
@@ -7,9 +7,12 @@ hooks:
   AfterInstall:
     - location: scripts/after_install.sh
       timeout: 300
+      runas: root
   ApplicationStop:
     - location: scripts/application_stop.sh
       timeout: 300
+      runas: root
   ApplicationStart:
     - location: scripts/application_start.sh
       timeout: 300
+      runas: root
