--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://cartify:CrateWi78@freecodecluster.mdazh.mongodb.net/cartify?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://cartify:2IeYMTl8Mw1VhuSy@freecodecluster.mdazh.mongodb.net/cartify?retryWrites=true&w=majority
